Add all parts of gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,7 @@
-# Use Docker image for node
-image: node:latest
+stages:
+  - build
+  - test
+  - deploy
 
 # This folder is cached between builds
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
@@ -7,14 +9,55 @@ cache:
   paths:
     - node_modules/
 
-build:
+build_site:
+  image: node:10.16.0-alpine
+  stage: build
   script:
     - npm install
+    - npm run build
+  artifacts:
+    paths:
+      - public
 
-test:
+test_site:
+  image: node:10.16.0-alpine
+  stage: test
   script:
     - npm run test
-    
-deploy:
-  script: 
-    - npm run deploy
+
+deploy_staging:
+  image: python:latest
+  stage: deploy
+  script:
+    - pip install awscli
+    - aws s3 sync public/ s3://dev.eatdrinkrva.com/ --delete
+  environment:
+    name: staging
+    url: http://dev.eatdrinkrva.com
+  except:
+   - master
+   - tags
+
+deploy_QA:
+  image: python:latest
+  stage: deploy
+  script:
+    - pip install awscli
+    - aws s3 sync public/ s3://qa.eatdrinkrva.com/ --delete
+  environment:
+    name: QA
+    url: http://qa.eatdrinkrva.com
+  only:
+    - master
+
+deploy_production:
+  image: python:latest
+  stage: deploy
+  script:
+    - pip install awscli
+    - aws s3 sync public/ s3://eatdrinkrva.com/ --delete
+  environment:
+    name: production
+    url: https://eatdrinkrva.com
+  only:
+    - tags
