--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.14",
     "@types/node": "^12.0.2",
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
@@ -29,8 +30,10 @@
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.13.0",
+    "jest": "^24.8.0",
     "prettier": "^1.17.1",
-    "typescript": "^3.4.5"
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.5.2"
   },
   "keywords": [
     "gatsby"
