--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,10 +5,6 @@ stages:
 
 # This folder is cached between builds
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
-cache:
-  key: ${CI_COMMIT_REF_SLUG}
-  paths:
-    - node_modules/
 
 build_site:
   image: node:10.16.0
@@ -16,6 +12,10 @@ build_site:
   script:
     - npm install
     - npm run build
+  cache:
+    key: ${CI_COMMIT_REF_SLUG}
+    paths:
+      - node_modules/
   artifacts:
     paths:
       - public
@@ -24,7 +24,13 @@ test_site:
   image: node:10.16.0
   stage: test
   script:
+    - npm run lint
+    - npm run type-check
     - npm run test
+  cache:
+    key: ${CI_COMMIT_REF_SLUG}
+    paths:
+      - node_modules/
 
 deploy_staging:
   image: python:latest
