--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "eatdrinkrva",
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Keith Denning <keithdenning1@gmail.com>",
   "dependencies": {
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
@@ -26,8 +26,8 @@
   "devDependencies": {
     "@types/jest": "^24.0.14",
     "@types/node": "^12.0.2",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^1.9.0",
+    "@typescript-eslint/eslint-plugin": "^1.10.2",
+    "@typescript-eslint/parser": "^1.10.2",
     "babel-jest": "^24.8.0",
     "babel-preset-gatsby": "^0.1.11",
     "eslint": "^5.16.0",
@@ -53,7 +53,7 @@
     "serve": "gatsby serve",
     "test": "jest",
     "type-check": "tsc --noEmit",
-    "lint": "eslint ./src/"
+    "lint": "eslint **/*.tsx"
   },
   "repository": {
     "type": "git",
