--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,10 +3,7 @@ stages:
   - test
   - deploy
 
-# This folder is cached between builds
-# http://docs.gitlab.com/ce/ci/yaml/README.html#cache
-
-build_site:
+build_staging:
   image: node:10.16.0
   stage: build
   script:
@@ -21,6 +18,26 @@ build_site:
   artifacts:
     paths:
       - public
+  except:
+    - master
+    - tags
+
+build_site:
+  image: node:10.16.0
+  stage: build
+  script:
+    - npm install
+    - npm run build
+  cache:
+    key: ${CI_COMMIT_REF_SLUG}
+    paths:
+      - node_modules/
+  artifacts:
+    paths:
+      - public
+  only:
+    - master
+    - tags
 
 test_site:
   image: node:10.16.0
