--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-sharp": "^2.0.37",
     "gatsby-plugin-typescript": "^2.0.15",
     "gatsby-source-filesystem": "^2.0.37",
+    "gatsby-transformer-json": "^2.2.0",
     "gatsby-transformer-sharp": "^2.1.19",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
