--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "version": "0.1.0",
   "author": "Keith Denning <keithdenning1@gmail.com>",
   "dependencies": {
+    "@types/classnames": "^2.2.9",
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
     "@types/react-test-renderer": "^16.8.2",
+    "classnames": "^2.2.6",
     "dotenv": "^8.0.0",
     "gatsby": "^2.6.0",
     "gatsby-image": "^2.1.0",
