Feature/style index page (#10)
* Adjust colors. Move borders

* Add styling and specials table

* Add new styling for specials and timeslots

* Add key to pass linting checks

* Null check on restaurant description

* Add font and adjust spacing of specials

* Remove open sans condensed

* Add svg with google maps directions

* Added svg icons

--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "version": "0.1.0",
   "author": "Keith Denning <keithdenning1@gmail.com>",
   "dependencies": {
+    "@types/classnames": "^2.2.9",
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
     "@types/react-test-renderer": "^16.8.2",
+    "classnames": "^2.2.6",
     "dotenv": "^8.0.0",
     "gatsby": "^2.6.0",
     "gatsby-image": "^2.1.0",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-react-svg": "^2.1.1",
     "gatsby-plugin-sass": "^2.1.0",
     "gatsby-plugin-sharp": "^2.0.37",
     "gatsby-plugin-typescript": "^2.0.15",
