--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "dotenv": "^8.0.0",
     "gatsby": "^2.6.0",
     "gatsby-image": "^2.1.0",
+    "gatsby-plugin-canonical-urls": "^2.1.2",
+    "gatsby-plugin-google-analytics": "^2.1.7",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-react-svg": "^2.1.1",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sass": "^2.1.0",
     "gatsby-plugin-sharp": "^2.0.37",
+    "gatsby-plugin-sitemap": "^2.2.6",
     "gatsby-plugin-typescript": "^2.0.15",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-contentful": "^2.1.8",
